@@ -1,4 +1,8 @@
 2004-04-23  Markus Germeier  <mager@tzi.de>
+	* libmpio/src/mpio.c (mpio_close): 
+	  - fixed a stupid bug while closing the device
+
+2004-04-23  Markus Germeier  <mager@tzi.de>
 	* remove all files from CVS which can be automagically
 	  generated by the build environment
 	  -> this should fix the missing ".so" problem
